@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
+
+- Added GetLegendGraphic Cascading support (#3923)
+
 - Rewrite  postgres TIME queries to take advantage of indexes (#3374)
 
 - Unified OWS requests and applied to WCS (defaults to version 2.0 now) (#3925)
